comparison/comp.h

#ifdef __cplusplus
extern "C"
#endif
float fexpf(float x);

#ifdef __cplusplus
extern "C"
#endif
float cexpf(float x);

#ifdef __cplusplus
extern "C"
#endif
double fexpd(double x);

#ifdef __cplusplus
extern "C"
#endif
double cexpd(double x);

#ifdef __cplusplus
extern "C"
#endif
double*fexpd_v(double*x, int n);